--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
     "php": ">=7.0",
     "illuminate/database": "^5.1",
     "illuminate/support": "^5.1",
-    "illuminate/queue": "^5.1",
-    "enqueue/amqp-lib": "0.8.*",
-    "queue-interop/amqp-interop": "^0.7"
+    "illuminate/queue": "^5.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
