--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1",
     "illuminate/database": "^5.1",
     "illuminate/support": "^5.1",
     "illuminate/queue": "^5.1"
@@ -18,6 +18,9 @@
     "phpunit/phpunit": "~7.0",
     "illuminate/events": "^5.1",
     "mockery/mockery": "~1.0"
+  },
+  "suggest": {
+    "ext-swoole": "Event-driven asynchronous & concurrent & coroutine networking engine with high performance for PHP."
   },
   "autoload": {
     "psr-4": {
