--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.0",
     "illuminate/database": "^5.1",
     "illuminate/support": "^5.1",
     "illuminate/queue": "^5.1"
@@ -42,8 +42,8 @@
       ]
     }
   },
-  "scripts": {
-    "test": "vendor/bin/phpunit"
+  "config": {
+    "sort-packages": true
   },
   "minimum-stability": "dev",
   "prefer-stable": true
